--- a/post/blogbook/bookone/为什么要容忍错误言论.md
+++ b/post/blogbook/bookone/为什么要容忍错误言论.md
@@ -12,7 +12,7 @@
 > 
 > 国家权力在他的至高无上的控制之下，各种权力机关----市行政会议和宗教法庭，大学和法院，金融和道德，教士和学校，巡捕和监狱，文字和言论，甚至最秘密的切切私语，都听任他摆布。
 > 
-> 他的教条已成为法律，任何人胆敢怀疑就要立刻受到教训，用压制讨论的辩论，用彻头彻尾精神暴虐的辩论，用监禁、流放或者火刑。> 
+> 他的教条已成为法律，任何人胆敢怀疑就要立刻受到教训，用压制讨论的辩论，用彻头彻尾精神暴虐的辩论，用监禁、流放或者火刑。 
 > 这教训就是在日内瓦只有一条真理是完全正确的：加尔文即先知。"
 
 今天，我重新读了一遍这本书，深感收获重大。我把这本书郑重推荐给大家，希望大家至少能够记住这本书的书名：即使异端也有自己的权利！
