--- a/实用软件.md
+++ b/实用软件.md
@@ -125,3 +125,8 @@ https://www.gaoding.com/koutu?hmsr=zhongcao-kt_zh_xltx-koutu---pmzd-bdqd&utm_med
    - 开启　proxy
    - 关闭　noproxy
    - 查ip myip
+
+## 网页截长图
+1. 在想要截取长图的页面上右击-检查，弹出代码页。
+2. 在代码页按住Ctrl+shift+P，打开输入命令查找文件的窗口。
+3. 在窗口中输入Capture full size screenshot 命令，抓取全网页面
