--- a/前端库.md
+++ b/前端库.md
@@ -1,3 +1,6 @@
 # CDN
 ## jquery
 https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.min.js
+
+## vue
+https://cdn.staticfile.org/vue/2.2.2/vue.min.js
