--- a/读书.md
+++ b/读书.md
@@ -1,23 +1,23 @@
-- 做一个有用的人
-- 读好书，好读书
-- 规划人生，审视生活
-- 终生读书
-- 终生学习 (知识无尽，知识增长)
-- 学以致用
-- 确保充实的睡眠时间
-- 将重要的事情放在早晨
-- 减少娱乐(缩减生命)，增加阅读,学习
-- 增强效率，提高速度，做正确的事情
-- 集中精神，休息断点，劳逸结合
+一本书讲 一个 或 几个 故事， 注意书的 [大纲] 结构
+注意人的遗忘曲线 ，每隔 3 天 温习 一下
 
-5/13
-## 起床后的黄金1小时 
-1. 做规划，断网，做记录，充实
-2. 改变自己的习惯
+一定要做规划，一定要断网，才能集中精神且不浪费时间  -> <起床后的黄金1小时> 
 
-- 对工作产生兴趣
-- 做一行，爱一行，尽力而为，变成专家
-- 
+## 起床后的黄金1小时 (故事，白领  如何度过有安排的早晨)
+1. 一定要做规划，一定要断网
+2. 改变习惯，在一念之间，要改变自己的习惯
+
+## 明朝那些事儿
+事儿不一定全对，但可读性较好
+
+讲了对历史影响大的人的故事 
+印象深的是 于谦，王阳明，等
+
+## 方与圆 ->丁远峙
+### 第一部
+激发成功的欲望 --> 激活自己的动机
+思考，行动
+
 
 ## java 核心技术
 - java虚拟机 -- 更好的跨平台
