--- a/数学.md
+++ b/数学.md
@@ -1,4 +1,10 @@
-## 单个量能解决的问题 
-## 多个量能解决的问题 （变量）
-## 解决方法 （函数）
+## 基础代数学
+连续的数 (少数可以理想化的东西)
+离散的数
 
+代数 就是解决代数表达式的故事 (复杂到简单)
+
+## 辗转相除求余数的故事
+## 多项式展开的故事
+
+## 矩阵
