--- a/读书.md
+++ b/读书.md
@@ -3,6 +3,12 @@
 
 一定要做规划，一定要断网，才能集中精神且不浪费时间  -> <起床后的黄金1小时> 
 
+## 母亲与我
+缺乏理性是我这辈子做的最悲哀的事。后果就是悲剧的人生
+拖延使我一事无成
+做人 ，做事 别扭捏，想好后路迅速行动
+
+母亲，一辈子勤奋
 ## 起床后的黄金1小时 (故事，白领  如何度过有安排的早晨)
 1. 一定要做规划，一定要断网
 2. 改变习惯，在一念之间，要改变自己的习惯
@@ -22,3 +28,27 @@
 ## java 核心技术
 - java虚拟机 -- 更好的跨平台
 - 丰富的库
+
+## 机器人总动员
+一个 小 机器人 最求 "情" 的过程  
+轮盘机器人的 "恶" 和 舰长的 "勇"  
+人类对环境的破坏 ，使得环境不能使人生存，大自然 能稀释人类的污染
+
+## 一代宗师
+"技术" 精英，在变革时代中的 "落魄",战争使人 难堪。
+## 霸王别姬
+时代，中国人的恶，无知，劣根性
+普通百姓生活的艰难，戏子，婊子的友情，无情
+
+# 2046 
+平凡人的 "感情" 生活，
+
+## 瑞克和莫蒂
+充满想象的去 "科幻" 冒险，夹着日常生活
+
+## 平凡的世界
+无望之地，就要 “出去” 找寻希望.
+朋友，家人，一起奋斗
+
+## 养生 -> 张波博客
+早睡早起，早晚锻炼
