--- a/实用软件.md
+++ b/实用软件.md
@@ -8,9 +8,9 @@ youtube-dl --proxy socks5://127.0.0.1:42428  https://www.youtube.com/watch?v=pKa
 AppimageLauncher： 用来更好的使用以 appimage 为拓展名的应用程序。
 
 ## 设计软件
- - krita 绘图
- - gimp 图片修理
- - 
+ - krita 绘图, 使用色彩画出美丽的图像
+ - gimp 图片修理，调节图像的元素
+
 ## 影视处理
 ### 录制视频短片 peek
 sudo add-apt-repository ppa:peek-developers/stable
