--- a/读书.md
+++ b/读书.md
@@ -2,6 +2,7 @@
 注意人的遗忘曲线 ，每隔 3 天 温习 一下
 
 一定要做规划，一定要断网，才能集中精神且不浪费时间  -> <起床后的黄金1小时> 
+卑微的 "事业"，就缺少"力量"
 
 ## 母亲与我
 缺乏理性是我这辈子做的最悲哀的事。后果就是悲剧的人生
@@ -53,3 +54,15 @@
 
 ## 养生 -> 张波博客
 早睡早起，早晚锻炼
+
+## 大话西游 
+错过的 "感情"
+卑微的 "事业"，就缺少"力量"
+
+## 教父
+"男人" 要养家的故事，创造事业 
+
+## 无间道
+谁是好人, 还是有好人,但很心酸.
+
+
