--- a/数据服务.md
+++ b/数据服务.md
@@ -1,4 +1,4 @@
-## 用FastAPI开发网络数据接口
+## FastAPI
 
 FastAPI 是一个用于构建API（网络数据接口）的现代、高性能的Web框架，基于Python 3.6+，使用了Python中的类型提示进行类型检查，非常符合工程化开发的需求，在业界有非常好的口碑。下面，我们先用代码告诉大家FastAPI到底能做什么，然后再来讲解它的方方面面。
 
