--- a/computer/soft/hugo.org
+++ b/computer/soft/hugo.org
@@ -1,4 +1,5 @@
 # hugo
+网站构造器
 
 ** 命令使用  
    - 创建网站 hugo new site SITENAME
@@ -26,6 +27,7 @@
      - /themes/THEME/layouts/TYPE-or-SECTION/single.html
      - /themes/THEME/layouts/_default/single.html
 
+       
        结构
        #+begin_quote
        ▾ layouts/
