--- a/人生/爱因斯坦.org
+++ b/人生/爱因斯坦.org
@@ -9,11 +9,16 @@
 此外，法语也成为他所掌握的少数几门外语中最熟练的语言。在听众不能听懂德文（他的母语）时，他一般选择用法语发表演讲或进行对话。
  #+end_quote
 
-一个幸福的人对现在感到太满意，就不可能对未来思考太多。另外，年轻人喜欢投身于大胆的计划。而对一个严肃认真的青年来说，对自己所渴望的目标形成尽可能明晰的想法是很自然的事情。
+一个幸福的人对现在感到太满意，就不可能对未来思考太多。另外，年轻人喜欢投身于大胆
+的计划。而对一个严肃认真的青年来说，对自己所渴望的目标形成尽可能明晰的想法是很自
+然的事情。
 
-如果运气好，能通过考试，我将前往苏黎世联邦理工学院就读。我会在那里学4年数学和物理学。我想成为自然科学分支专业的一名老师，我会选择其中的理论部分。
+如果运气好，能通过考试，我将前往苏黎世联邦理工学院就读。我会在那里学4年数学和物
+理学。我想成为自然科学分支专业的一名老师，我会选择其中的理论部分。
 
-促使我制订这个计划的是这样一些理由：首先，是因为我个人倾向于抽象思维和数学思维，缺乏想象力和实践能力。我的愿望也启发我下了同样的决心。人们总是喜欢做他具有天赋的事情，这是十分自然的。其次，科学事业存在一定的独立性，那正是我非常喜欢的。
+促使我制订这个计划的是这样一些理由：首先，是因为我个人倾向于抽象思维和数学思维，
+缺乏想象力和实践能力。我的愿望也启发我下了同样的决心。人们总是喜欢做他具有天赋的
+事情，这是十分自然的。其次，科学事业存在一定的独立性，那正是我非常喜欢的。
 
 ** 我从未试图在任何场合取悦别人
    
