--- a/一技之长.md
+++ b/一技之长.md
@@ -1,10 +1,21 @@
-## 人生，应该做一些 创造力的东西!!! 
-
-## 兴趣，爱好 (实践，产生身体的观念)
-### 坐姿兴趣
-翘二郎腿，用脚趾摩擦升降桌的柱子的兴趣 (运动)
 ## 认知
+知其然，知其所以然。
+
 ## 情绪，心态
+内心平静而不情绪，心态平和。
+
 ## 学习
+过目不忘，知其所以。
+
 ## 理财
+人不理财，财不理你。 财而投资，以财生财。
+
 ## 规律 (生活，人生，思维)
+规律而平稳，波动难驾驭。
+
+## 幸福 是希望 
+幸福是一种想象，是一种愿望，希望。
+希望给您幸福，给您动力。
+
+## 只有爱惜金钱，金钱才会爱惜你；珍惜时间，时间才会珍惜你；做事情专注，它才会回报你。
+## 阅读比听快，做比看快
