--- a/人/最美文学.org
+++ b/人/最美文学.org
@@ -40,3 +40,24 @@
 一想到你，我这张丑脸就泛起微笑。
 
 爱由心生 彼此温暖
+* 笑话
+** 话    别
+
+     男：“亲爱的，你一定要早点给我来信，越早越好，
+ 不然我要急死的。”
+     女：“放心吧，亲爱的，为了安慰你，昨天我就把信
+ 写好了。”
+** 想在一处
+
+      “亲爱的阿贝，我今年四十四岁。我在想，要是能
+  遇到一个年龄同我相似而没有任何坏习惯的男人就
+  好了。”
+      “亲爱的阿芬，我也在这样想。”
+** 机场更美
+    晚会上，一位姿容秀美的姑娘胸前挂着个飞机模
+型项饰。
+    有个空军军官对此大为赞赏，目不转睛地看着，
+看得姑娘都有点不好意思了，便问他：“你是不是觉得
+我这架小飞机好看呀？”
+    “小飞机确实太美了，不过，那机场更美！”
+ 
