--- a/人/电子计算机/子项目/weixin.org
+++ b/人/电子计算机/子项目/weixin.org
@@ -1,4 +1,19 @@
+
+- 注册账号，登录
+- 服务号，每个服务号可以创建10个主体小程序和3个非主体小程序
+- 开发工具IDE
+- 预览权限 添加成员或添加体验成员
+
+
+ 特点  
+- 没有DOM
+- 组件化开发；具备特定功能效果的代码集合
+- 适配方案 rpx(responsive pixel 响应式像素单位) 750rpx [全是手机屏幕,电脑上也是]
+
+  
+ 
 * 小程序配置
+  
 ** sitemap.json 
  配置小程序及其页面是否允许被微信索引
 *** 所有页面都会被微信索引（默认情况） 
