--- a/人/电子计算机/框架/前端/前端库.md
+++ b/人/电子计算机/框架/前端/前端库.md
@@ -7,20 +7,24 @@
 
 # CDN
 ## jquery
-```
+``` html
 https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.min.js
 ```
 ## vue
-```
-https://cdn.staticfile.org/vue/2.2.2/vue.min.js
+``` html
+<!-- vue2 -->
+<script src="https://cdn.staticfile.org/vue/2.2.2/vue.min.js"></script>
+
+<!-- vue3  -->
+<script src="https://unpkg.com/vue@next"></script>
 ```
 ## bootstrap
 ### bootstrap3
-```
+``` html
 <link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
 ```
 ### bootstrap4
-```
+``` html
 <link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
 ```
 ## font-awesome
