--- a/人/电子计算机/软件/设备.md
+++ b/人/电子计算机/软件/设备.md
@@ -43,3 +43,9 @@ xsetwacom -s --set "Wacom Intuos5 touch M Pen pad" Button 10 "button 0"
 xsetwacom -s --set "Wacom Intuos5 touch M Pen pad" Button 11 "button 0"
 xsetwacom -s --set "Wacom Intuos5 touch M Pen pad" Button 12 "button 0"
 xsetwacom -s --set "Wacom Intuos5 touch M Pen pad" Button 13 "button 0"
+
+# 声音处理
+
+显示设备 
+
+cat /proc/asound/cards
