--- a/人/电子计算机/软件/设备.md
+++ b/人/电子计算机/软件/设备.md
@@ -43,3 +43,14 @@ xsetwacom -s --set "Wacom Intuos5 touch M Pen pad" Button 10 "button 0"
 xsetwacom -s --set "Wacom Intuos5 touch M Pen pad" Button 11 "button 0"
 xsetwacom -s --set "Wacom Intuos5 touch M Pen pad" Button 12 "button 0"
 xsetwacom -s --set "Wacom Intuos5 touch M Pen pad" Button 13 "button 0"
+
+# audio recording
+Run sudo alsamixer and turn off mic to reduce the noise
+Run alsamixer to double check pulse setup
+Make sure correct device is selected in audacity
+Restart audacity and test
+
+运行sudo alsamixer并关闭麦克风以减少噪音。
+运行alsamixer来仔细检查脉冲设置
+确保在 audacity 中选择了正确的设备
+重新启动audacity并测试
