--- a/人/电子计算机/软件/设备.md
+++ b/人/电子计算机/软件/设备.md
@@ -47,5 +47,10 @@ xsetwacom -s --set "Wacom Intuos5 touch M Pen pad" Button 13 "button 0"
 # 声音处理
 
 显示设备 
-
 cat /proc/asound/cards
+
+kill 进程
+pulseaudio -k 
+
+重启 
+pulseaudio -D
