--- a/人/目标/TODO-2021.md
+++ b/人/目标/TODO-2021.md
@@ -8,7 +8,7 @@
 
 有氧运动半小时
 
-
-
-有两种互联网从业者：一种是真正热爱互联网的人，他们从业务的探索中获得乐趣，至于商业成功带来的衍生的其他利益，则被视为是额外的；另一种，从事这一行业只是手段，或者面对异性时更有吸引力才是他们所追求的。
+有两种互联网从业者：一种是真正热爱互联网的人，他们从业务的探索中获得乐趣，至于商业成功带来的衍生的其他利益，则被视为是额外的；
+另一种，从事这一行业只是手段，或者面对异性时更有吸引力才是他们所追求的。
 两种从业者都可能成功或者失败，但是只有前一种人才能够创造历史 ，谢家华就是其中的一例。
+
