--- a/人/电子计算机/框架/前端/前端库.md
+++ b/人/电子计算机/框架/前端/前端库.md
@@ -19,13 +19,16 @@ https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.min.js
 <script src="https://unpkg.com/vue@next"></script>
 ```
 ## bootstrap
+### bootstrap2
+
 ### bootstrap3
 ``` html
 <link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
 ```
 ### bootstrap4
 ``` html
-<link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
+<link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
 ```
 ## font-awesome
 ### font-awesome5 
