--- a/人/人生健康.org
+++ b/人/人生健康.org
@@ -1,5 +1,8 @@
 吃好，睡好，情绪好，记忆好，事业发展
 
+为生活找方法
+学习的目的，增加复杂度，增加广度。
+
 基本需求 :老人，小孩
 github 是技术市场
 google 是需求市场
@@ -117,7 +120,12 @@ http://bbs.diaoyu.com/showtopic-2266032-1-1.html
 
 ** 如何阅读一本书 
    根据书中的某个结论（观点），用思维推导的方式，比较结论。或直接思考结论。
-
+** 学习方法
+1.定量学习法，每天定量学习任务，难度适中，根据自身情况进行百分之十的加强。（定量积累，也就是日积月累，哪怕每天多学0.1坚持下去成果也会让你满意）
+2.心流法，忘我境界，绝对专注。每天一道题，难度与你能力一致，逐渐练习在熟练的情况下突破自我的感觉。
+3.刻意练习法，指专攻一科或一种知识点，累计学习时间达到二十小时，又大成效。但保证，学习时没有干扰，认清核心主干优先选择。慢慢来，比较快
+4.框架法，首先归纳主题，其次建立分支（此时掌握核心知识点，禁忌大段抄书），再次全盘联想各知识点之间关系，可以用月老的红线将它们拴起来。
+5.费曼法，即亲身上阵，扮演老师，讲知识点向别人或虚拟人尽量简洁明了讲述，讲述过程出现问题就去回看，最终效果最好。
 * 工作
 ** 知识，技术
 ** 市场
