--- a/人/电子计算机/子项目/微信小程序.md
+++ b/人/电子计算机/子项目/微信小程序.md
@@ -1,5 +1,3 @@
-<h1 align="center">微信小程序开发资源汇总</h1>
-
 本文收集了微信小程序开发过程中会使用到的资料、问题以及第三方组件库。本文不是一篇关于如何学习微信小程序的入门指南，也非参考手册，只是一些资料的整理。
 
 ## 目录
@@ -25,12 +23,9 @@
 - [小程序 API](https://developers.weixin.qq.com/miniprogram/dev/api/)
 - [小程序开发者工具](https://developers.weixin.qq.com/miniprogram/dev/devtools/devtools.html)
 
-[↑ 返回目录 ↑](#目录)
-
 ## 工具
 
-- [Taro ★26k+](https://github.com/NervJS/taro) - 使用 React 的方式开发小程序的框架，同时支持生成多端应用
-- [uni-app ★25k+](https://github.com/dcloudio/uni-app) - 使用 Vue 语法开发小程序、H5、App的统一框架
+- [Taro ★26k+](https://github.com/NervJS/taro) - 使用 React 的方式开发小程序的框架，同时支持生成多端应用 - [uni-app ★25k+](https://github.com/dcloudio/uni-app) - 使用 Vue 语法开发小程序、H5、App的统一框架
 - [WePY ★20k+](https://github.com/Tencent/wepy) -  支持组件化的小程序开发框架
 - [mpvue ★19k+](https://github.com/Meituan-Dianping/mpvue) - 基于 Vue.js 的小程序开发框架，从底层支持 Vue.js 语法和构建工具体系
 - [chameleon ★7k+](https://github.com/didi/chameleon) - 一套代码运行多端，一端所见即多端所见
@@ -87,10 +82,6 @@
 - [wxml](https://github.com/cnyballk/wxml-vscode) - vscode插件--微信小程序格式化以及高亮组件(高度自定义)
 - [vim-vue-plugin](https://github.com/leafOfTree/vim-vue-plugin) - vim 插件，.vue 和 .wpy 文件的语法高亮和缩进
 - [wux-weapp-snippets](https://github.com/wux-weapp/wux-weapp-snippets) - Wux Weapp Snippets for VS Code.
-- [wux-weapp-atom-snippets](https://github.com/wux-weapp/wux-weapp-atom-snippets) - Wux Weapp Snippets for Atom.
-- [wux-weapp-sublime-snippets](https://github.com/wux-weapp/wux-weapp-sublime-snippets) - Wux Weapp Snippets Plugin for Sublime Text 2/3.
-
-[↑ 返回目录 ↑](#目录)
 
 ## 组件
 
