--- a/人/电子计算机/子项目/weixin.org
+++ b/人/电子计算机/子项目/weixin.org
@@ -1,8 +1,13 @@
+* 小程序 
+微信内应用，主要提供给企业、政府、媒体、其他组织或个人的开发者在微信平台上提供服务。
+小程序属于微信注册账号，每个账号可以有5个小程序。
 
-- 注册账号，登录
-- 服务号，每个服务号可以创建10个主体小程序和3个非主体小程序
-- 开发工具IDE
-- 预览权限 添加成员或添加体验成员
+平台规则:
+
+费用:
+
+企业、政府、媒体、其他组织注册小程序需要进行微信认证，认证费用为300元，如该企业已有微信公众号，则可以用微信公众号快速创建小程序账号，以此创建的小程序无需认证。
+个人注册主体无法认证，故无需缴纳300元认证费用，但会有功能限制。
 
 
  特点  
