--- a/人/人生健康.org
+++ b/人/人生健康.org
@@ -1,19 +1,13 @@
-吃好，睡好，情绪好，记忆好，事业发展
+吃好，睡好，情绪好，记忆好，事业发展，办事效率高【有很多细细打磨的趁手工具】
 
 为生活找方法
 学习的目的，增加复杂度，增加广度。
 
-基本需求 :老人，小孩
-github 是技术市场
-google 是需求市场
-
 * 官方定义
 健康是指一个人在身体、精神和社会等方面都处于良好的状态。
-#+begin_export type
-#+end_export
+
 现代人的健康内容包括：躯体健康、心理健康、心灵健康、社会健康、智力健康、道德健康、环境健康等。
-#+begin_export type
-#+end_export
+
 健康=15%遗传因素+10%社会因素+8%医疗条件+7%气候条件+60%自我保健
    
 因为影响健康的因素有好多，比如前面几条都不是我们个人能改变的，我们现在唯一方便做的就是 *自我保健* 。
@@ -53,7 +47,6 @@ google 是需求市场
  3. 抚摸肚子
  4. 喝水
 
- ```
  然后，每天早晚按以下操作，坚持锻炼:
  1.慢起慢落的深蹲十个（不需要多）
 
@@ -71,7 +64,6 @@ google 是需求市场
 
  照顾好自己,保持营养
 
- ```
 
 * 休息方面
   - 打盹：学会在一切场合，如办公室、走廊、汽车里、打盹 10 分钟，这会令你精神振奋。
@@ -130,3 +122,13 @@ http://bbs.diaoyu.com/showtopic-2266032-1-1.html
 ** 知识，技术
 ** 市场
 ** 大数据
+* 思想(思维)
+思考可以让人类认知、诠释、描述或模型化其体验的周遭世界，并作出关于世界的预测。
+
+** 思考过程
+   思考是高级的心理活动形式，人脑对信息的处理包括分析、抽象、综合、概括、对比系统的和具体的过程。这些是思考最基本的过程。
+
+** 种类   
+   思维的种类大概包括动作思维、形象思维、词语思维、无声思维、通讯思维、指导性思维和创造性思维，发散思维，聚合思维，联想思维，创新思维，系统化思维等。
+
+
