--- a/人/人生.md
+++ b/人/人生.md
@@ -1,3 +1,26 @@
+# 人
+长者智人化石表明，现代人类在约20万年前的东非大裂谷演化成形
+
+人类有比其他动物更发达的大脑，能进行复杂的计算和抽象思维。加上人类的直立身驱使人类的前肢可以自由活动，因此人类对工具的使用远超出其他任何物种。人类还试图用哲学、艺术、科学、神话以及宗教来解释自然界的现象。这强烈的好奇心促使了高级工具和科学技术的发展
+
+与其他灵长类动物一样，人类是社会性的。人类个体之间的社会交际创立了广泛的传统习俗、宗教制度、价值观、法律，这些共同构成了人类社会的基础。人尤其擅长用口语、手势、肢体语言与书面语言来沟通、协作、表达自我、交际、交换意见、组织事物。
+
+
+## 人类起源
+演化起源， 从猿类演化 (演化学说，主流理论，但普通民众相信神创论)
+
+## 生理特征
+
+### 大脑 ###
+
+智能是指生物一般性的能力，包括理解、计划、解决问题、抽象思维、表达意念以及语言和学习的能力。智力测验被经常用作确定人的智力。一些研究者已经开始对累积智能进行研究，这种智力来自于人们的协作。计算机科学促进了对人工智能领域的研究，这些研究旨在寻求如何使计算机以更加智能化的方式运算。人的情感，都是由大脑而产生的。通过感官对外界的认识，而形成自己的看法或态度，形成自己的独立判断，并且逐渐深入，形成情感。
+
+### 身体 ###
+
+## 社会特征
+### 语言 
+### 伦理
+
 ## 人生
 吃，住，拉，行，学，感，思，死
 
